--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Curius Philosophy</title>
-  <style>
-    /* Refined Grit Inspired Styling */
-    :root {
-      --bg-color: #f8f6f3;
-      --accent-color: #1a1a1a;
-      --highlight-color: #af8c53;
-      --text-color: #2b2b2b;
-      --font-primary: 'Georgia', serif;
-      --font-secondary: 'Helvetica Neue', sans-serif;
+  <<link rel="stylesheet" href="style.css" />
     }
 
     * {
