--- a/index.html
+++ b/index.html
@@ -4,60 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Curius Philosophy</title>
-  <<link rel="stylesheet" href="style.css" />
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      font-family: var(--font-primary);
-      line-height: 1.6;
-      padding: 2rem;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
-
-    header h1 {
-      font-size: 2.8rem;
-      color: var(--accent-color);
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      font-family: var(--font-secondary);
-      color: var(--highlight-color);
-    }
-
-    main {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-    }
-
-    section {
-      padding: 1.5rem;
-      border: 1px solid var(--highlight-color);
-      border-radius: 8px;
-      background: white;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 4rem;
-      font-size: 0.9rem;
-      color: var(--accent-color);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -66,17 +13,17 @@
   </header>
 
   <main>
-    <section>
+    <section class="about">
       <h2>About</h2>
       <p>This section is a placeholder for your personal philosophy, introduction, or creative mission. Edit as needed.</p>
     </section>
 
-    <section>
+    <section class="projects">
       <h2>Projects</h2>
       <p>Coming soon: showcase of AI experiments, speculative metaphysics, or portfolio links.</p>
     </section>
 
-    <section>
+    <section id="contact">
       <h2>Contact</h2>
       <p>Add a contact form, email link, or newsletter sign-up here.</p>
     </section>
@@ -87,3 +34,4 @@
   </footer>
 </body>
 </html>
+
