--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | Curius Philosophy</title>
   <link rel="stylesheet" href="style.css" />
+  <nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+  </ul>
+</nav>
 </head>
 <body>
   <header class="container">
